--- a/front/src/components/styles/SongList.css
+++ b/front/src/components/styles/SongList.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 15px;
+    padding: 10px;
   }
   
   .music-card {
-    width: 90%;
-    margin: 10px 0;
-    padding: 15px;
+    width: 95%;
+    margin: 5px 0;
+    padding: 10px;
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -38,11 +38,13 @@
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: center;
+      padding: 15px;
     }
   
     .music-card {
       width: calc(33% - 30px);
       margin: 15px;
+      padding: 15px;
     }
   }
   
