--- a/front/src/components/styles/SongSearch.css
+++ b/front/src/components/styles/SongSearch.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 15px;
-  gap: 10px;
+  padding: 10px;
+  gap: 5px;
   justify-content: center;
   height: 100vh;
 }
@@ -37,6 +37,8 @@
 @media (min-width: 600px) {
   .song-search-container {
     height: auto;
+    padding: 15px;
+    gap: 10px;
   }
 
   .song-search-input {
